--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,6 @@ html/
 
 
 # ignore tests
-en-lanc1
-out
-en-lanc_1-bi.parDix
 
 # ignore all files ending with ~
 *~
@@ -27,5 +24,5 @@ en-lanc_1-bi.parDix
 *.jar
 
 # ignore pycache
-*__pycache__
+**/__pycache__
 
